FIX attempt for jarring scrolling effect on mobile 3

--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -20,7 +20,6 @@ p {
   font-size: 0.9rem;
 }
 .parallax {
-  position: fixed;
   top: 0px;
   left: 0px;
   width: 100%;
